--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": "",
   "dependencies": {
-    "@gatfanoff/ajs-platforms": "^1.0.0"
-  }
+    "@gatfanoff/ajs-platforms": "^1.0.0",
+    "core-js": "^3.33.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "jest": "^29.7.0",
+    "jest-babel": "^1.0.1"
+  },
+  "description": ""
 }
